--- a/_layouts/tour.html
+++ b/_layouts/tour.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adventurers Guild</title>
-  <!-- favion -->
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/{{ site.baseurl }}/img/favicon-16x16.png">
-  <!-- link to font awesome -->
-  <link media="all" rel="stylesheet" href="{{ site.baseurl }}/vendors/font-awesome/css/font-awesome.css">
-  <!-- link to material icon font -->
-  <link media="all" rel="stylesheet" href="{{ site.baseurl }}/vendors/material-design-icons/material-icons.css">
-  <!-- link to custom icomoon fonts -->
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/fonts/icomoon/icomoon.css">
-  <!-- link to wow js animation -->
-  <link media="all" rel="stylesheet" href="{{ site.baseurl }}/vendors/animate/animate.css">
-  <!-- include bootstrap css -->
-  <link media="all" rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.css">
-  <!-- include owl css -->
-  <link media="all" rel="stylesheet" href="{{ site.baseurl }}/vendors/owl-carousel/owl.carousel.css">
-  <link media="all" rel="stylesheet" href="{{ site.baseurl }}/vendors/owl-carousel/owl.theme.css">
-  <!-- include main css -->
-  <link media="all" rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
-  <!-- link to revolution css  -->
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/vendors/revolution/css/settings.css">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Tour Details</title>
+	<!-- favion -->
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/favicon-16x16.png">
+	<!-- link to font awesome -->
+	<link media="all" rel="stylesheet" href="{{ site.baseurl }}/vendors/font-awesome/{{ site.baseurl }}/css/font-awesome.css">
+	<!-- link to custom icomoon fonts -->
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/fonts/icomoon/icomoon.css">
+	<!-- link to wow js animation -->
+	<link media="all" rel="stylesheet" href="{{ site.baseurl }}/vendors/animate/animate.css">
+	<!-- include bootstrap css -->
+	<link media="all" rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.css">
+	<!-- include owl css -->
+	<link media="all" rel="stylesheet" href="{{ site.baseurl }}/vendors/owl-carousel/owl.carousel.css">
+	<link media="all" rel="stylesheet" href="{{ site.baseurl }}/vendors/owl-carousel/owl.theme.css">
+	<!-- include fancybox css -->
+	<link media="all" rel="stylesheet" href="{{ site.baseurl }}/vendors/fancybox/jquery.fancybox.css">
+	<!-- include main css -->
+	<link media="all" rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 </head>
-<body>
-  <div class="preloader" id="pageLoad">
-    <div class="holder">
-      <div class="coffee_cup"></div>
-    </div>
-  </div>
-  <!-- main wrapper -->
-  <div id="wrapper">
-    <div class="page-wrapper">
-      <!-- main header -->
-      <header id="header" class="default-white-header header-v2">
+<body class="default-page">
+	<div class="preloader" id="pageLoad">
+		<div class="holder">
+			<div class="coffee_cup"></div>
+		</div>
+	</div>
+	<!-- main wrapper -->
+	<div id="wrapper">
+		<div class="page-wrapper">
+			<!-- main header -->
+			<header id="header" class="default-white-header header-v2">
         <div class="container-fluid">
           <!-- logo -->
           <div class="logo">
@@ -152,11 +150,10 @@
         </div>
         
       </header>
-    </div>
-
-    {{ content }}
-      
-    <!-- main footer -->
+			{{content}}
+		</div>
+		<!-- main footer -->
+		<!-- main footer -->
     <footer id="footer">
       <div class="container">
         
@@ -241,47 +238,35 @@
         </div>
       </div>
     </footer>
-  </div>
-  <!-- scroll to top -->
-  <div class="scroll-holder text-center">
-    <a href="javascript:" id="scroll-to-top"><i class="icon-arrow-down"></i></a>
-  </div>
-  <!-- jquery library -->
-  <script src="{{ site.baseurl }}/vendors/jquery/jquery-2.1.4.min.js"></script>
-  <!-- external scripts -->
-  <script src="{{ site.baseurl }}/vendors/bootstrap/javascripts/bootstrap.min.js"></script>
-  <script src="{{ site.baseurl }}/vendors/jquery-placeholder/jquery.placeholder.min.js"></script>
-  <script src="{{ site.baseurl }}/vendors/match-height/jquery.matchHeight.js"></script>
-  <script src="{{ site.baseurl }}/vendors/wow/wow.min.js"></script>
-  <script src="{{ site.baseurl }}/vendors/stellar/jquery.stellar.min.js"></script>
-  <script src="{{ site.baseurl }}/vendors/validate/jquery.validate.js"></script>
-  <script src="{{ site.baseurl }}/vendors/waypoint/waypoints.min.js"></script>
-  <script src="{{ site.baseurl }}/vendors/counter-up/jquery.counterup.min.js"></script>
-  <script src="{{ site.baseurl }}/vendors/jquery-ui/jquery-ui.min.js"></script>
-  <script src="{{ site.baseurl }}/vendors/jQuery-touch-punch/jquery.ui.touch-punch.min.js"></script>
-  <script src="{{ site.baseurl }}/vendors/fancybox/jquery.fancybox.js"></script>
-  <script src="{{ site.baseurl }}/vendors/owl-carousel/owl.carousel.min.js"></script>
-  <script src="{{ site.baseurl }}/vendors/jcf/js/jcf.js"></script>
-  <script src="{{ site.baseurl }}/vendors/jcf/js/jcf.select.js"></script>
-  <script src="{{ site.baseurl }}/js/mailchimp.js"></script>
-  <script src="{{ site.baseurl }}/vendors/retina/retina.min.js"></script>
-  <script src="{{ site.baseurl }}/vendors/bootstrap-datetimepicker-master/dist/js/bootstrap-datepicker.js"></script>
-  <!-- custom jquery script -->
-  <script src="{{ site.baseurl }}/js/jquery.main.js"></script>
-  <!-- revolution slider plugin -->
-  <script type="text/javascript" src="{{ site.baseurl }}/vendors/revolution/js/jquery.themepunch.tools.min.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/vendors/revolution/js/jquery.themepunch.revolution.min.js"></script>
-  <!-- rs5.0 core files -->
-  <script type="text/javascript" src="{{ site.baseurl }}/vendors/revolution/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/vendors/revolution/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/vendors/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/vendors/revolution/js/extensions/revolution.extension.actions.min.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/vendors/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/vendors/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/vendors/revolution/js/extensions/revolution.extension.video.min.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/vendors/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/vendors/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
-  <!-- revolutions slider script -->
-  <script src="{{ site.baseurl }}/js/revolution.js"></script>
+	</div>
+	<!-- scroll to top -->
+	<div class="scroll-holder text-center">
+		<a href="javascript:" id="scroll-to-top"><i class="icon-arrow-down"></i></a>
+	</div>
+	<!-- jquery library -->
+	<script src="{{ site.baseurl }}/vendors/jquery/jquery-2.1.4.min.js"></script>
+	<!-- external scripts -->
+	<script src="{{ site.baseurl }}/vendors/bootstrap/javascripts/bootstrap.min.js"></script>
+	<script src="{{ site.baseurl }}/vendors/jquery-placeholder/jquery.placeholder.min.js"></script>
+	<script src="{{ site.baseurl }}/vendors/match-height/jquery.matchHeight.js"></script>
+	<script src="{{ site.baseurl }}/vendors/wow/wow.min.js"></script>
+	<script src="{{ site.baseurl }}/vendors/stellar/jquery.stellar.min.js"></script>
+	<script src="{{ site.baseurl }}/vendors/validate/jquery.validate.js"></script>
+	<script src="{{ site.baseurl }}/vendors/waypoint/waypoints.min.js"></script>
+	<script src="{{ site.baseurl }}/vendors/counter-up/jquery.counterup.min.js"></script>
+	<script src="{{ site.baseurl }}/vendors/jquery-ui/jquery-ui.min.js"></script>
+	<script src="{{ site.baseurl }}/vendors/jQuery-touch-punch/jquery.ui.touch-punch.min.js"></script>
+	<script src="{{ site.baseurl }}/vendors/fancybox/jquery.fancybox.js"></script>
+	<script src="{{ site.baseurl }}/vendors/owl-carousel/owl.carousel.min.js"></script>
+	<script src="{{ site.baseurl }}/vendors/jcf/js/jcf.js"></script>
+	<script src="{{ site.baseurl }}/vendors/jcf/js/jcf.select.js"></script>
+	<script src="{{ site.baseurl }}/vendors/retina/retina.min.js"></script>
+	<script src="{{ site.baseurl }}/vendors/bootstrap-datetimepicker-master/dist/js/bootstrap-datepicker.js"></script>
+	<script src="{{ site.baseurl }}/vendors/sticky-kit/sticky-kit.js"></script>
+	<!-- mailchimp newsletter subscriber -->
+	<script src="{{ site.baseurl }}/js/mailchimp.js"></script>
+	<!-- custom script -->
+	<script src="{{ site.baseurl }}/js/sticky-kit-init.js"></script>
+	<script src="{{ site.baseurl }}/js/jquery.main.js"></script>
 </body>
 </html>
