--- a/css/main.css
+++ b/css/main.css
@@ -594,7 +594,7 @@ blockquote.normal {
 /* logo styles */
 
 .logo {
-	padding: 21px 0;
+	padding: 0px 0;
 	text-align: center;
 	position: relative;
 	margin: 0 90px;
@@ -618,7 +618,7 @@ blockquote.normal {
 .logo a {
 	display: inline-block;
 	vertical-align: middle;
-	width: 100px;
+	/*width: 100px;*/
 	-webkit-transition: all .2s linear;
 	transition: all .2s linear;
 }
@@ -1539,7 +1539,7 @@ blockquote.normal {
 	position: absolute;
 	margin: 0;
 	left: 20px;
-	top: -52px;
+	top: -72px;
 	padding: 10px;
 }
 
@@ -2130,9 +2130,9 @@ blockquote.normal {
 	display: inline-block;
 	vertical-align: middle;
 	margin-left: -.25em;
-	padding: 10px;
+	/*padding: 10px;*/
 	position: relative;
-	width: 12.5%;
+	width: 23.5%;
 	font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
@@ -9383,6 +9383,10 @@ h4,
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 767px) and (orientation: landscape) {
 
+.navbar-default .navbar-toggle {
+	top: -42px;
+}
+
 #tour-slide {
 	height: 320px;
 }
@@ -9394,6 +9398,10 @@ h4,
 }
 
 @media only screen and (min-width: 320px) and (max-width: 767px) and (orientation: portrait) {
+
+.navbar-default .navbar-toggle {
+	top: -42px;
+}
 
 .trip-info .bg-stretch {
 	position: static;
@@ -10337,12 +10345,12 @@ blockquote.normal {
 }
 
 #header.fixed-position .logo {
-	padding-top: 22px;
+	/*padding-top: 22px;*/
 	padding-bottom: 22px;
 }
 
 .logo {
-	width: 180px;
+	/*width: 180px;*/
 	margin: 0;
 	padding: 25px 15px 25px 0;
 	float: left;
@@ -11589,7 +11597,7 @@ h4,
 }
 
 #header.fixed-position .logo a {
-	width: 98px;
+	width: 198px;
 }
 
 #header.fixed-position .navbar-default .navbar-nav > li > a:hover {
@@ -11687,7 +11695,7 @@ h4,
 }
 
 .logo {
-	width: 240px;
+	width: 300px;
 	padding: 0px 15px 38px 0;
 }
 
@@ -12053,7 +12061,7 @@ h4,
 @media only screen and (max-width: 1299px) {
 
 .feature-block ul {
-	min-width: 1210px;
+	/*min-width: 1210px;*/
 	overflow: visible;
 }
 
@@ -12400,6 +12408,10 @@ h4,
 }
 
 @media only screen and (max-width: 539px) {
+
+.navbar-default .navbar-toggle {
+	top: -42px;
+}
 
 .banner.banner-slider .banner-text {
 	width: 300px;
